// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar #render component with image 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image"></slot>
      </div>
    </div>
  </mock:shadow-root>
  <img alt="John Doe Image" slot="image" src="https://i.pravatar.cc/300">
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (1) for valid markup 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (2) for valid markup 1`] = `
<gux-avatar-beta name="JohnDoe">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="JohnDoe">
            Jo
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (3) for valid markup 1`] = `
<gux-avatar-beta name="山田 太郎">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="山田 太郎">
            山太
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (4) for valid markup 1`] = `
<gux-avatar-beta name="이 영수">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="이 영수">
            이영
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (5) for valid markup 1`] = `
<gux-avatar-beta name="邓 小平">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="邓 小平">
            邓小
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "large" 1`] = `
<gux-avatar-beta abbr="JD" name="John Doe" size="large">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "medium" 1`] = `
<gux-avatar-beta abbr="JD" name="John Doe" size="medium">
  <mock:shadow-root>
    <div class="gux-avatar gux-medium">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "medium-rare" 1`] = `
<gux-avatar-beta abbr="JD" name="John Doe" size="medium-rare">
  <mock:shadow-root>
    <div class="gux-avatar gux-medium-rare">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "small" 1`] = `
<gux-avatar-beta abbr="JD" name="John Doe" size="small">
  <mock:shadow-root>
    <div class="gux-avatar gux-small">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "xsmall" 1`] = `
<gux-avatar-beta abbr="JD" name="John Doe" size="xsmall">
  <mock:shadow-root>
    <div class="gux-avatar gux-xsmall">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;
